--- a/javascript/javascript.html
+++ b/javascript/javascript.html
@@ -42,10 +42,10 @@
 
 	</script><br><br>
 
-	<button onclick="document.getElementById('off').src = 'bulb_on.png';">On</button>
-	<img id="off" src="bulb_off.png" alt="bulb off">
-	<!--img id="on" src="bulb_on.png" alt="bulb on"-->
-	<button onclick="document.getElementById('off').src = 'bulb_off.png';">Off</button>
+	<button onclick="document.getElementById('off').src = 'media/bulb_on.png';">On</button>
+	<img id="off" src="media/bulb_off.png" alt="bulb off">
+	<!--img id="on" src="media/bulb_on.png" alt="bulb on"-->
+	<button onclick="document.getElementById('off').src = 'media/bulb_off.png';">Off</button>
 
 
 	<p id="day"></p>
