--- a/html_css/practice.html
+++ b/html_css/practice.html
@@ -22,6 +22,10 @@
 </head> 
 <body>
 
+<marquee class="slide">
+	<h2>😎 নিচে HTML-এর উদাহরণ গুলো দেওয়া হল:</h2>
+</marquee>
+
 <h1>This is the biggest heading (h1).</h1>
 <h6>This is the smallest heading (h6).</h6>
 <p title="Myself 'Touhid'">I am <del>Monty</del> Touhid.My institution name is <abbr title="Khulna University of Engineering & Technology.">KUET</abbr> that is situated in <s>Dhaka</s> Khulna.My age is <mark>24</mark>.</p>
