--- a/html_css/practice.html
+++ b/html_css/practice.html
@@ -41,7 +41,7 @@
 <p> <mark>p</mark> is block level element but <mark>img</mark> is inline element.</p>
 <img src="media/mask.png" alt="This is Dipjol." width="500" height="300"/> <!-- <img> is inline element. -->
 <img src="media/right-arrow.png" alt="Right Arrow" width="239" height="300">
-<a href="www.touhid.com" target="_blank"><img src="media/touhid.png" alt="This is Touhid." width="500" height="300"></a>
+<a href="www.touhid.com" target="_blank"><img src="media/mos.png" alt="This is Touhid." width="500" height="300"></a>
 <hr style="background-color:red;">
 <p dir="rtl">Hello World</p>
 <p><bdo dir="rtl">Hello World!</bdo></p>
@@ -244,7 +244,7 @@
   <source src="media/Manush-Manusher-Jannya.mp3" type="audio/mpeg">
 </audio>
 
-<video class="video" controls poster="media/touhid.png"> <!--autoplay loop muted-->
+<video class="video" controls poster="media/mos.png"> <!--autoplay loop muted-->
   <source src="media/videoplayback.mp4" type="video/mp4">
 </video>
 
